Duda sobre posicion de elementos y captions

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
               class="events__image"
             />
             <div class="person person_name_feynman">
-              <p class="person_caption">Joan Feynman</p>
+              <p class="person person__caption">Joan Feynman</p>
               <img
                 src="./images/person_feynman.png"
                 alt="Foto de Feynman"
@@ -198,7 +198,7 @@
               />
             </div>
             <div class="person person_name_burbidge">
-              <p class="person_caption">Margaret Burbidge</p>
+              <p class="person person__caption">Margaret Burbidge</p>
               <img
                 src="./images/person_burbidge.png"
                 alt="Foto de Burbidge"
@@ -211,7 +211,7 @@
                 alt="Foto de Cannon"
                 class="person__image person__image_size_m"
               />
-              <p class="person_caption">Annie Jump Cannon</p>
+              <p class="person person__caption">Annie Jump Cannon</p>
             </div>
             <div class="person person_name_mitchell">
               <img
@@ -219,10 +219,10 @@
                 alt="Foto de Mitchell"
                 class="person__image person__image_size_s"
               />
-              <p class="person_caption">Maria Mitchell</p>
+              <p class="person person__caption">Maria Mitchell</p>
             </div>
             <div class="person person_name_tarter">
-              <p class="person_caption">Jill Tarter</p>
+              <p class="person person__caption">Jill Tarter</p>
               <img
                 src="./images/person_tarter.png"
                 alt="Foto de Tarter"
@@ -230,6 +230,63 @@
               />
             </div>
           </div>
+        </section>
+        <section class="membership">
+          <h2 class="membership__title">
+            ¡Convertirse en miembro es muy fácil!
+          </h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Paso 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Completa el formulario de afiliación en línea o en persona.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Ven y recoge tu credencial de la biblioteca en la recepción.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Firma el envés de la tarjeta.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                ¡Disfruta de los increíbles beneficios de nuestra membresía!
+              </p>
+            </li>
+          </ul>
         </section>
       </main>
     </div>
