--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
               <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Conviértete en miembro</a>
+              <a class="nav__link" href="#conviertete-en-miembro">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contactos</a>
+              <a class="nav__link" href="#contactos">Contactos</a>
             </li>
           </ol>
         </nav>
@@ -190,7 +190,7 @@
               class="events__image"
             />
             <div class="person person_name_feynman">
-              <p class="person person__caption">Joan Feynman</p>
+              <p class="person__caption">Joan Feynman</p>
               <img
                 src="./images/person_feynman.png"
                 alt="Foto de Feynman"
@@ -198,7 +198,7 @@
               />
             </div>
             <div class="person person_name_burbidge">
-              <p class="person person__caption">Margaret Burbidge</p>
+              <p class="person__caption">Margaret Burbidge</p>
               <img
                 src="./images/person_burbidge.png"
                 alt="Foto de Burbidge"
@@ -211,7 +211,7 @@
                 alt="Foto de Cannon"
                 class="person__image person__image_size_m"
               />
-              <p class="person person__caption">Annie Jump Cannon</p>
+              <p class="person__caption">Annie Jump Cannon</p>
             </div>
             <div class="person person_name_mitchell">
               <img
@@ -219,10 +219,10 @@
                 alt="Foto de Mitchell"
                 class="person__image person__image_size_s"
               />
-              <p class="person person__caption">Maria Mitchell</p>
+              <p class="person__caption">Maria Mitchell</p>
             </div>
             <div class="person person_name_tarter">
-              <p class="person person__caption">Jill Tarter</p>
+              <p class="person__caption">Jill Tarter</p>
               <img
                 src="./images/person_tarter.png"
                 alt="Foto de Tarter"
@@ -231,7 +231,7 @@
             </div>
           </div>
         </section>
-        <section class="membership">
+        <section class="membership" id="conviertete-en-miembro">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
           </h2>
@@ -288,7 +288,53 @@
             </li>
           </ul>
         </section>
+        </section>
       </main>
-    </div>
+      <footer class="footer" id="contactos">
+        <div class="footer__columns">
+          <div class="footer__column">
+            <img
+              class="footer__logo"
+              src="./images/logo_white.svg"
+              alt="Logotipo"
+            />
+          </div>
+          <div class="footer__column footer__column_content_hours">
+            <h3 class="footer__column-heading">Horario de apertura</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                Lunes a viernes: 9 a.m. a 8 p.m.
+              </li>
+              <li class="footer__list-item">
+                Sabados y domingos: 10 a.m. a 6 p.m.
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h3 class="footer__column-heading">Redes Sociales</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook"
+                    class="footer__social-icon"
+                  />Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram"
+                    class="footer__social-icon"
+                  />Instagram</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2024 Ismael</p>
+      </footer>
   </body>
 </html>
